<resources>
    <string name="app_name">CPEN321Tutorial1</string>
    <string name="location_button_caption">Get Location Permission</string>
    <string name="maps_button_caption">Google Maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="Sign_Out">Sign Out</string>
    <string name="TheTitle">MileStone1</string>
    <string name="SubTitle">By Zheng Xu</string>
    <string name="My_Favorite_City">My Favorite City</string>
    <string name="Phone_Details">Phone Details</string>
    <string name="Login_and_Server_Info">Login and Server Info</string>
    <string name="Surprise">Surprise!!!</string>
    <string name="Hello">1000% ACCURACY!!!</string>
    <string name="Surprice">Hello, here is the test about psychology which could accurately tell what kinds of person you are, are you ready for this?</string>
    <string name="LetsRock">LETS ROCK!!!</string>
    <string name="Q1">If you are free, you perfer to head outside or do the relaxed activity at home? </string>
    <string name="Q1_1">Outside</string>
    <string name="Q1_2">Home</string>
    <string name="Q2">When you are working, you perfer to use desktop computer or laptop computer? </string>
    <string name="Q2_1">Desktop</string>
    <string name="Q2_2">Laptop</string>
    <string name="Q3">You prefer Android or IOS? </string>
    <string name="Q3_1">Android</string>
    <string name="Q3_2">IOS</string>
    <string name="Q4">Which operating system you prefer to use in computer? </string>
    <string name="Q4_1">Windows or Linux</string>
    <string name="Q4_2">MacOS</string>
    <string name="Q5">You prefer Pepsi or Coca Cola? </string>
    <string name="Q5_1">Pepsi</string>
    <string name="Q5_2">Coca Cola</string>
    <string name="Congra">CONGRATULATION!!!</string>
    <string name="Base">Base on your answers, we know that you are:</string>
    <string name="Pepsi">Someone who love Pepsi more than Coke!!!</string>
    <string name="Coke">Someone who love Coke more than Pepsi!!!</string>
    <string name="Next">NEXT</string>
    <string name="Final">Tired? Here is a video that might make you feels great in some degree.</string>
    <string name="Video">The Secret Video</string>
    <string name="PlayVideo">Play The Video</string>
    <string name="HOME">Back to Home</string>
    <string name="title_activity_login_page">LoginPage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="or">OR</string>
    <string name="DontHaveAccount">Do not have a account?</string>
    <string name="SignIn">SIGN IN</string>
    <string name="LogIn">LOG IN</string>
    <string name="UserLogIn">User Login</string>
    <string name="ManagerLogIn">Manager Login</string>
    <string name="ManagerMode">Log in as Gym Manager</string>
    <string name="UserMode">Log in as Gym User</string>
    <string name="MFour">M4</string>
    <string name="Email">Email</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="NewUser">New User</string>
    <string name="NoteOfNewUser">Lets input some information on your profile</string>
    <string name="DONE">DONE</string>
    <string name="CREATEPROFILE">Create Profile</string>
    <string-array name="roles">
        <item>Select Your Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
        <item>No Prefer To Say</item>
    </string-array>
    <string name="WeeklySchedule">Weekly Schedule</string>
    <string name="Left"> PREV </string>
    <string name="Right"> NXT </string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>